--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -238,8 +238,8 @@
   <data name="asteroid_Iron_Cobalt" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\asteroid_Iron_Cobalt.vox;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="asteroid_Ice_Magnasium" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\asteroid_Ice_Magnasium.vox;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="asteroid_Ice_Magnesium" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\asteroid_Ice_Magnesium.vox;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="asteroid_Platinum_Nickel1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\asteroid_Platinum_Nickel1.vox;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
