--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -280,4 +280,16 @@
   <data name="transform" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\transform.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ExceptionState_NoApplication" xml:space="preserve">
+    <value>The Space Engineers Application could not be found.
+To use the SEToolbox, you must have SpaceEngineers installed on your computer.</value>
+  </data>
+  <data name="ExceptionState_NoDirectory" xml:space="preserve">
+    <value>The Space Engineers Directory could not be found.
+To use the SEToolbox, you must have SpaceEngineers installed on your computer.</value>
+  </data>
+  <data name="ExceptionState_NoRegistry" xml:space="preserve">
+    <value>The Space Engineers Game was not detected in Registry.
+To use the SEToolbox, you must have SpaceEngineers installed on your computer.</value>
+  </data>
 </root>
