--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -301,4 +301,7 @@ To use the SEToolbox, you must have SpaceEngineers installed on your computer.</
   <data name="ExceptionState_MissingContentFile" xml:space="preserve">
     <value>The Space Engineers content file '{0}' could not be loaded, because it could not be located.</value>
   </data>
+  <data name="workshop16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\workshop16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
