Corrected issues with Updater which may inadvertantly get into loop where it keeps spawning itself. FIxed issue where application becomes hidden when SE isn't detected. Changed Loader again, to allow loading of save worlds that have been copied into the Save folder manually but not yet in the LastLoaded file. Added proper units, volume and size information to Asteroid and ship details, allowing copying of information. Fixed issues where cube components were wrongly selected for calculating mass. Updated Main window with Name. Updated binaries from latest SE release, and version to match prior to release.

--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -346,4 +346,21 @@ To use the SEToolbox, you must have SpaceEngineers installed on your computer.</
   <data name="ModelTraceVoxel_ThinSmoothed" xml:space="preserve">
     <value>Thin Shell with Smoothing</value>
   </data>
+  <data name="VoxelDetail" xml:space="preserve">
+    <value>Filename:	{0}
+Bounding Size:	{1}
+Size:		{2} m × {3} m × {4} m
+Volume:		{5:#,##0.00} m³
+VoxCells:		{6:#,##0}
+Distance:		{7:#,###0.0} m</value>
+  </data>
+  <data name="CubeDetail" xml:space="preserve">
+    <value>Piloted:		{0}
+Damage:		{1}
+Speed:		{2:#,###0.000} m/s
+Distance:		{3:#,###0.0} m
+Scale:		{4} blocks
+Size:		{5} m × {6} m × {7} m
+Mass:		{8:#,###0} Kg</value>
+  </data>
 </root>
