--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -348,20 +348,21 @@ To use the SEToolbox, you must have SpaceEngineers installed on your computer.</
   </data>
   <data name="VoxelDetail" xml:space="preserve">
     <value>Filename:	{0}
-Bounding Size:	{1}
-Size:		{2} m × {3} m × {4} m
-Volume:		{5:#,##0.00} m³
-VoxCells:		{6:#,##0}
-Distance:		{7:#,###0.0} m</value>
+Bounding Size:	{1} × {2} × {3} blocks
+Size:		{4} m × {5} m × {6} m
+Volume:		{7:#,##0.00} m³
+VoxCells:		{8:#,##0}
+Distance:		{9:#,##0.0} m</value>
   </data>
   <data name="CubeDetail" xml:space="preserve">
     <value>Piloted:		{0}
 Damage:		{1}
-Speed:		{2:#,###0.000} m/s
-Distance:		{3:#,###0.0} m
-Scale:		{4} blocks
-Size:		{5} m × {6} m × {7} m
-Mass:		{8:#,###0} Kg</value>
+Speed:		{2:#,##0.000} m/s
+Distance:		{3:#,##0.0} m
+Scale:		{4} × {5} × {6} blocks
+Size:		{7} m × {8} m × {9} m
+Mass:		{10:#,##0} Kg
+Blocks:		{11:#,##0}</value>
   </data>
   <data name="document_view" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\document_view.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
