--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -376,4 +376,11 @@ Blocks:		{11:#,##0}</value>
   <data name="navigate_right2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\navigate_right2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="FloatingDetail" xml:space="preserve">
+    <value>Type:		{0}
+Distance:		{1:#,##0.0} m
+Volume:		{2:#,##0.000} L
+Mass:		{3:#,##0.00} Kg
+Units:		{4:#,##0}</value>
+  </data>
 </root>
