--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -359,14 +359,29 @@ Ore	Mass	Percent
 {13}</value>
   </data>
   <data name="CubeDetail" xml:space="preserve">
-    <value>Piloted:		{0}
-Damage:		{1}
-Speed:		{2:#,##0.000} m/s
-Distance:		{3:#,##0.0} m
-Scale:		{4} × {5} × {6} blocks
-Size:		{7} m × {8} m × {9} m
-Mass:		{10:#,##0} Kg
-Blocks:		{11:#,##0}</value>
+    <value>Piloted:	{0}
+Damage:	{1}
+Speed:	{2:#,##0.000} m/s
+Distance:	{3:#,##0.0} m
+Scale:	{4} × {5} × {6} blocks
+Size:	{7} m × {8} m × {9} m
+Mass:	{10:#,##0.00} Kg
+Blocks:	{11:#,##0}
+Position:	{12}, {13}, {14}
+Time to produce parts:	{15:dd} days, {15:hh} hours, {15:mm\:ss\.ff}
+
+Construction Requirements:
+Cubes	Count	Mass
+{16}
+
+Components	Count	Mass	Volume	Time to Produce
+{17}
+
+Ingots	Amount	Mass	Volume	Time to Produce
+{18}
+
+Ore	Amount	Mass	Volume
+{19}</value>
   </data>
   <data name="document_view" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\document_view.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
