--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -363,4 +363,16 @@ Units:		{4:#,##0}</value>
   <data name="package_add" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\package_add.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="form_green_view" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\form_green_view16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="screwdriver" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\screwdriver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Boolean_False" xml:space="preserve">
+    <value>No</value>
+  </data>
+  <data name="Boolean_True" xml:space="preserve">
+    <value>Yes</value>
+  </data>
 </root>
