--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -396,4 +396,22 @@ Units:		{4:#,##0}</value>
   <data name="error24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\error24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="UnhandledExceptionEventMessage" xml:space="preserve">
+    <value>An error has been detected in the application that has caused the application to shutdown:
+
+{0}
+
+Please see the Application Event Log for more details.
+Apologies for any inconvenience.</value>
+  </data>
+  <data name="UnhandledExceptionMessage" xml:space="preserve">
+    <value>An error has been detected in the application that has caused the application to shutdown:
+
+{0}
+
+Apologies for any inconvenience.</value>
+  </data>
+  <data name="UnhandledExceptionTitle" xml:space="preserve">
+    <value>"Space Engineers Toolbox Error</value>
+  </data>
 </root>
